# projekt-2-yukon-solitaire

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
LOL/: Regler.c
